driver sql bug fix
