# src/controllers/drivers.ts
@@ -25,9 +25,9 @@ export const getDrivers = async(req: Request, res: Response) => {
 
 export const addDriver = async(req: any, res: Response) => {
   try {
-    const { name, address, licenseStatus } = req.body
+    const { name, address, license } = req.body
 
-    const queryString = `insert into driver(name, address, licenseStatus) values('${name}', '${address}', ${licenseStatus});`
+    const queryString = `insert into driver(name, address, license) values('${name}', '${address}', ${license});`
     console.log(queryString)
     const data = await pool.query(queryString)
     return res.json({
@@ -49,8 +49,8 @@ export const addDriver = async(req: any, res: Response) => {
 
 export const updateDriver = async(req: any, res: Response) => {
   try {
-    const { id, name, address, licenseStatus } = req.body
-    const queryString = `update driver set name='${name}', address='${address}', licenseStatus=${licenseStatus} where id=${id};`
+    const { id, name, address, license } = req.body
+    const queryString = `update driver set name='${name}', address='${address}', license=${license} where id=${id};`
     console.log(queryString)
     const data = await pool.query(queryString)
     return res.json({
